--- a/applications/gitops-app1/route.yaml
+++ b/applications/gitops-app1/route.yaml
@@ -2,12 +2,14 @@ apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
   labels:
-    app: spring-petclinic
-  name: spring-petclinic
+    app: httpd
+  name: httpd
+  namespace: demo-acm
 spec:
   port:
-    targetPort: 8080-tcp
+    targetPort: 8080
   to:
     kind: Service
-    name: spring-petclinic
+    name: httpd
     weight: 100
+  wildcardPolicy: None
