--- a/applications/gitops-app1/service.yaml
+++ b/applications/gitops-app1/service.yaml
@@ -1,24 +1,17 @@
 apiVersion: v1
 kind: Service
 metadata:
+  creationTimestamp: null
   labels:
-    app: spring-petclinic
-  name: spring-petclinic
+    app: httpd
+  name: httpd
+  namespace: demo-acm
 spec:
   ports:
-  - name: 8080-tcp
-    port: 8080
+  - port: 8080
     protocol: TCP
     targetPort: 8080
-  - name: 8443-tcp
-    port: 8443
-    protocol: TCP
-    targetPort: 8443
-  - name: 8778-tcp
-    port: 8778
-    protocol: TCP
-    targetPort: 8778
   selector:
-    app: spring-petclinic
+    app: httpd
   sessionAffinity: None
   type: ClusterIP
