--- a/applications/gitops-app1/namespace.yaml
+++ b/applications/gitops-app1/namespace.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: spring-petclinic
+  name: gitops-app1
   labels:
     argocd.argoproj.io/managed-by: openshift-gitops
 spec:
