--- a/setup/manifests/argocd-setup/app_cluster-config.yaml
+++ b/setup/manifests/argocd-setup/app_cluster-config.yaml
@@ -14,3 +14,8 @@ spec:
     path: cluster-configs
     repoURL: https://github.com/apoczekalewicz/gitops-cluster-main.git
     targetRevision: HEAD
+  syncPolicy:
+    automated:
+      prune: false
+      selfHeal: true
+
