--- a/00-argocd/00-clusters/main/kustomization.yaml
+++ b/00-argocd/00-clusters/main/kustomization.yaml
@@ -3,5 +3,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 
 bases:
   - 01-cluster-config
-#  - 02-cluster-services
+  - 02-cluster-services
 #  - 03-tenants
