--- a/00-argocd/00-clusters/main/02-cluster-services/kustomization.yaml
+++ b/00-argocd/00-clusters/main/02-cluster-services/kustomization.yaml
@@ -5,6 +5,7 @@ namespace: openshift-gitops
 
 bases:
   - ../../../02-cluster-services/01-compliance
+  - ../../../02-cluster-services/02-openshift-pipelines
 
 resources:
   - cluster-services-project.yaml
