--- a/00-argocd/00-clusters/main/01-cluster-config/kustomization.yaml
+++ b/00-argocd/00-clusters/main/01-cluster-config/kustomization.yaml
@@ -5,6 +5,7 @@ namespace: openshift-gitops
 
 bases:
   - ../../../01-cluster-config/01-groups-and-membership
+  - ../../../01-cluster-config/02-openshift-gitops
 
 resources:
   - cluster-config-project.yaml
