--- a/00-argocd/00-clusters/main/02-cluster-services/kustomization.yaml
+++ b/00-argocd/00-clusters/main/02-cluster-services/kustomization.yaml
@@ -6,6 +6,7 @@ namespace: openshift-gitops
 bases:
   - ../../../02-cluster-services/01-compliance
   - ../../../02-cluster-services/02-openshift-pipelines
+  - ../../../02-cluster-services/03-acs
 
 resources:
   - cluster-services-project.yaml
