--- a/00-argocd/00-clusters/main/02-cluster-services/kustomization.yaml
+++ b/00-argocd/00-clusters/main/02-cluster-services/kustomization.yaml
@@ -4,9 +4,9 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 namespace: openshift-gitops
 
 bases:
-  - ../../../02-cluster-services/01-compliance
+#  - ../../../02-cluster-services/01-compliance
   - ../../../02-cluster-services/02-openshift-pipelines
-  - ../../../02-cluster-services/03-acs
+#  - ../../../02-cluster-services/03-acs
 
 resources:
   - cluster-services-project.yaml
