--- a/00-argocd/00-clusters/main/00-bootstrap/bootstrap-application.yaml
+++ b/00-argocd/00-clusters/main/00-bootstrap/bootstrap-application.yaml
@@ -15,7 +15,7 @@ spec:
     targetRevision: HEAD
   syncPolicy:
     automated:
-      prune: false
+      prune: true
       selfHeal: true
     syncOptions:
       - ApplyOutOfSyncOnly=true
