--- a/02-cluster-services/04-odf/kustomization.yaml
+++ b/02-cluster-services/04-odf/kustomization.yaml
@@ -2,4 +2,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 bases:
-  - github.com/redhat-cop/gitops-catalog/openshift-data-foundation-operator/operator/overlays/stable-4.9?ref=main
+  - operator
+
