--- a/00-argocd/00-clusters/main/01-cluster-config/kustomization.yaml
+++ b/00-argocd/00-clusters/main/01-cluster-config/kustomization.yaml
@@ -6,6 +6,7 @@ namespace: openshift-gitops
 bases:
   - ../../../01-cluster-config/01-groups-and-membership
   - ../../../01-cluster-config/02-openshift-gitops
+  - ../../../01-cluster-config/03-oauth
 
 resources:
   - cluster-config-project.yaml
