--- a/00-argocd/00-clusters/main/02-cluster-services/kustomization.yaml
+++ b/00-argocd/00-clusters/main/02-cluster-services/kustomization.yaml
@@ -5,10 +5,10 @@ namespace: openshift-gitops
 
 bases:
 #  - ../../../02-cluster-services/01-compliance
-#  - ../../../02-cluster-services/02-openshift-pipelines
-#  - ../../../02-cluster-services/03-acs
+  - ../../../02-cluster-services/02-openshift-pipelines
+  - ../../../02-cluster-services/03-acs
   - ../../../02-cluster-services/04-odf
-#  - ../../../02-cluster-services/05-cnv
+  - ../../../02-cluster-services/05-cnv
   - ../../../02-cluster-services/06-acm
   - ../../../02-cluster-services/07-aap
 resources:
