--- a/00-argocd/01-cluster-config/03-oauth/kustomization.yaml
+++ b/00-argocd/01-cluster-config/03-oauth/kustomization.yaml
@@ -4,4 +4,4 @@ kind: Kustomization
 namespace: openshift-gitops
 
 resources:
-  - groups-and-membership-application.yaml
+  - oauth-application.yaml
