--- a/02-cluster-services/07-aap/kustomization.yaml
+++ b/02-cluster-services/07-aap/kustomization.yaml
@@ -5,3 +5,11 @@ bases:
   - operator
   - instance
 
+patchesJson6902:
+  - target:
+      group: operators.coreos.com
+      version: v1alpha1
+      kind: Subscription
+      name: ansible-automation-platform
+      namespace: ansible-automation-platform
+    path: patch-channel.yaml
