--- a/02-cluster-services/07-aap/instance/kustomization.yaml
+++ b/02-cluster-services/07-aap/instance/kustomization.yaml
@@ -3,3 +3,6 @@ kind: Kustomization
 
 bases:
   - github.com/redhat-cop/gitops-catalog/ansible-automation-platform/instance/overlays/default?ref=main
+
+resources:
+  - automation-hub.yaml
