--- a/00-argocd/03-tenants/02-vms/kustomization.yaml
+++ b/00-argocd/03-tenants/02-vms/kustomization.yaml
@@ -3,9 +3,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 
 namespace: openshift-gitops
 
-bases:
-  - ../../../03-tenants/01-example
-  - ../../../03-tenants/02-vms
-
 resources:
-  - tenants-project.yaml
+  - example-application.yaml
