--- a/00-argocd/03-tenants/02-vms/vms-application.yaml
+++ b/00-argocd/03-tenants/02-vms/vms-application.yaml
@@ -8,7 +8,7 @@ metadata:
   name: vms
 spec:
   destination:
-    namespace: example
+    namespace: vms
     server: https://kubernetes.default.svc
   project: tenants
   source:
