--- a/02-cluster-services/05-cnv/instance/kustomization.yaml
+++ b/02-cluster-services/05-cnv/instance/kustomization.yaml
@@ -6,8 +6,5 @@ commonAnnotations:
   argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
   argocd.argoproj.io/sync-wave: "2"
 
-
-bases:
-  - instance
-  - operator
-
+resources:
+  - hyperconverged.yaml
