--- a/02-cluster-services/07-aap/pipelines-and-secrets/kustomization.yaml
+++ b/02-cluster-services/07-aap/pipelines-and-secrets/kustomization.yaml
@@ -2,6 +2,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
+  - aap-ci-secrets-task.yaml
   - pipeline-rbac.yaml
-  - stackrox-ci-secrets-task.yaml
   - token-secret-pipeline.yaml
