--- a/02-cluster-services/07-aap/pipelines-and-secrets/aap-ci-secrets-task.yaml
+++ b/02-cluster-services/07-aap/pipelines-and-secrets/aap-ci-secrets-task.yaml
@@ -44,7 +44,7 @@ spec:
         echo "Waiting for controller to be available..." 
 
         until $(curl -k --output /dev/null --silent --head --fail
-        https://controller-service); do
+        http://controller-service); do
             
             if [ ${attempt_counter} -eq ${max_attempts} ];then
               echo "Max attempts reached"
@@ -57,18 +57,18 @@ spec:
             sleep 10
         done
 
-        CONTROLLER_URL="`oc get route -n ansible-automation-platform controller -o go-template='{{.spec.host}}'`"
-
+        CONTROLLER_URL="`oc get route controller -n ansible-automation-platform -o go-template='{{.spec.host}}'`"
+        echo "Controller URL - ${CONTROLLER_URL}"
 
         # Create application 
         API_ENDPOINT="/api/v2/applications/"
-        CONTROLLER_URL_API="https://$CONTROLLER_URL$API_ENDPOINT"
+        CONTROLLER_URL_API="http://$CONTROLLER_URL$API_ENDPOINT"
 
-        echo "CONTROLLER_URL_API"
+        echo "CONTROLLER_URL_API - $CONTROLLER_URL_API"
 
         PAYLOAD="{\"name\": \"$(params.NAMESPACE)\", \"description\": \"Project $(params.NAMESPACE)\", \"client_type\":\"confidential\", \"redirect_uris\":\"\", \"authorization_grant_type\":\"password\", \"skip_authorization\":false, \"organization\":1 }"
 
-        echo "$PAYLOAD"
+        echo "PAYLOAD - $PAYLOAD"
 
         echo "Create new application"
 
@@ -80,7 +80,7 @@ spec:
 
         # Create token
         API_ENDPOINT="/api/v2/tokens/"
-        CONTROLLER_URL_API="https://$CONTROLLER_URL$API_ENDPOINT"
+        CONTROLLER_URL_API="http://$CONTROLLER_URL$API_ENDPOINT"
 
         echo "CONTROLLER_URL_API"
 
@@ -97,7 +97,7 @@ spec:
           $CONTROLLER_URL_API)
 
         echo $RESPONSE
-#        TOKEN=$(jq -r '.token' <<< "$RESPONSE")
+        #        TOKEN=$(jq -r '.token' <<< "$RESPONSE")
 
         exit
         # Create secret in target namespace.
