--- a/02-cluster-services/07-aap/pipelines-and-secrets/aap-ci-secrets-task.yaml
+++ b/02-cluster-services/07-aap/pipelines-and-secrets/aap-ci-secrets-task.yaml
@@ -23,7 +23,6 @@ spec:
       name: create-api-token-and-secret
       resources: {}
       script: >
-
         # If secret already exists, don't regenerate.
 
         if [[ -n `oc get secret controlleraccess -n $(params.NAMESPACE) 2>/dev/null` ]] ;
@@ -57,11 +56,15 @@ spec:
             sleep 10
         done
 
-        CONTROLLER_URL="`oc get route controller -n ansible-automation-platform -o go-template='{{.spec.host}}'`"
-        echo "Controller URL - ${CONTROLLER_URL}"
+        CONTROLLER_URL="$(oc get route controller -n ansible-automation-platform -o go-template='{{.spec.host}}')"
 
+        echo Controller URL - ${CONTROLLER_URL}
+
+
+        exit
         # Create application 
         API_ENDPOINT="/api/v2/applications/"
+
         CONTROLLER_URL_API="http://$CONTROLLER_URL$API_ENDPOINT"
 
         echo "CONTROLLER_URL_API - $CONTROLLER_URL_API"
@@ -80,6 +83,7 @@ spec:
 
         # Create token
         API_ENDPOINT="/api/v2/tokens/"
+
         CONTROLLER_URL_API="http://$CONTROLLER_URL$API_ENDPOINT"
 
         echo "CONTROLLER_URL_API"
