--- a/02-cluster-services/07-aap/pipelines-and-secrets/pipeline-rbac.yaml
+++ b/02-cluster-services/07-aap/pipelines-and-secrets/pipeline-rbac.yaml
@@ -3,7 +3,7 @@ kind: ClusterRole
 metadata:
   annotations:
     argocd.argoproj.io/sync-wave: "1"
-  name: pipeline-create-secrets
+  name: pipeline-create-secrets-aap
   namespace: ansible-automation-platform
 rules:
   - apiGroups:
@@ -22,7 +22,7 @@ metadata:
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: pipeline-create-secrets
+  name: pipeline-create-secrets-aap
 subjects:
   - kind: ServiceAccount
     name: pipeline
