--- a/02-cluster-services/07-aap/pipelines-and-secrets/pipeline-rbac.yaml
+++ b/02-cluster-services/07-aap/pipelines-and-secrets/pipeline-rbac.yaml
@@ -17,7 +17,7 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: pipeline-create-secrets
+  name: pipeline-create-secrets-app
   namespace: ansible-automation-platform
 roleRef:
   apiGroup: rbac.authorization.k8s.io
