--- a/02-cluster-services/07-aap/pipelines-and-secrets/aap-ci-secrets-task.yaml
+++ b/02-cluster-services/07-aap/pipelines-and-secrets/aap-ci-secrets-task.yaml
@@ -47,13 +47,18 @@ spec:
             
             if [ ${attempt_counter} -eq ${max_attempts} ];then
               echo "Max attempts reached"
+
               exit 1
             fi
 
             printf '.'
+
             attempt_counter=$(($attempt_counter+1))
+
             echo "Made attempt $attempt_counter, waiting..."
+
             sleep 10
+
         done
 
         CONTROLLER_URL="$(oc get route controller -n ansible-automation-platform -o go-template='{{.spec.host}}')"
@@ -62,9 +67,10 @@ spec:
 
 
         # Create application 
+
         API_ENDPOINT="/api/v2/applications/"
 
-        CONTROLLER_URL_API="http://$CONTROLLER_URL$API_ENDPOINT"
+        CONTROLLER_URL_API="https://$CONTROLLER_URL$API_ENDPOINT"
 
         echo "CONTROLLER_URL_API - $CONTROLLER_URL_API"
 
@@ -81,13 +87,14 @@ spec:
           $CONTROLLER_URL_API)
 
         # Create token
+
         API_ENDPOINT="/api/v2/tokens/"
 
-        CONTROLLER_URL_API="http://$CONTROLLER_URL$API_ENDPOINT"
+        CONTROLLER_URL_API="https://$CONTROLLER_URL$API_ENDPOINT"
 
         echo "CONTROLLER_URL_API"
 
-        PAYLOAD="{\"$(\"description\": \"Project $(params.NAMESPACE)\ token\", \"application\":\"$(params.NAMESPACE)\", \"scope\":\"write\"}"
+        PAYLOAD="{\"description\": \"Project $(params.NAMESPACE) token\", \"application\":5, \"scope\":\"write\"}"
 
         echo "$PAYLOAD"
 
@@ -100,7 +107,10 @@ spec:
           $CONTROLLER_URL_API)
 
         echo $RESPONSE
-        #        TOKEN=$(jq -r '.token' <<< "$RESPONSE")
+
+        TOKEN=$(jq -r '.token' <<< "$RESPONSE")
+
+        echo $TOKEN 
 
         exit
         # Create secret in target namespace.
