--- a/00-argocd/00-clusters/main/03-tenants/kustomization.yaml
+++ b/00-argocd/00-clusters/main/03-tenants/kustomization.yaml
@@ -6,6 +6,7 @@ namespace: openshift-gitops
 bases:
   - ../../../03-tenants/01-example
   - ../../../03-tenants/02-vms
+  - ../../../03-tenants/03-example-security
 
 resources:
   - tenants-project.yaml
