--- a/01-cluster-config/01-groups-and-membership/cluster-admins-group.yaml
+++ b/01-cluster-config/01-groups-and-membership/cluster-admins-group.yaml
@@ -10,7 +10,7 @@ users:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: admins
+  name: cluster-admins
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
