--- a/02-cluster-services/07-aap/pipelines-and-secrets/aap-ci-secrets-task.yaml
+++ b/02-cluster-services/07-aap/pipelines-and-secrets/aap-ci-secrets-task.yaml
@@ -66,47 +66,25 @@ spec:
         echo Controller URL - ${CONTROLLER_URL}
 
 
-        # Create application 
+        # Create personal admin token
 
-        API_ENDPOINT="/api/v2/applications/"
+        API_ENDPOINT="/api/v2/users/admin/personal_tokens/"
 
         CONTROLLER_URL_API="https://$CONTROLLER_URL$API_ENDPOINT"
 
         echo "CONTROLLER_URL_API - $CONTROLLER_URL_API"
 
-        PAYLOAD="{\"name\": \"$(params.NAMESPACE)\", \"description\": \"Project $(params.NAMESPACE)\", \"client_type\":\"confidential\", \"redirect_uris\":\"\", \"authorization_grant_type\":\"password\", \"skip_authorization\":false, \"organization\":1 }"
+        PAYLOAD="{\"description\": \"Project $(params.NAMESPACE)\", \"application\":null, \"scope\":\"write\"}"
 
         echo "PAYLOAD - $PAYLOAD"
 
-        echo "Create new application"
+        echo "Create personal admin token - $(params.NAMESPACE)"
 
         RESPONSE=$(curl -k \
           -X POST -u "admin:$PASSWORD" \
           -H "Content-Type: application/json" \
           --data "$PAYLOAD" \
           $CONTROLLER_URL_API)
-
-        # Create token
-
-        API_ENDPOINT="/api/v2/tokens/"
-
-        CONTROLLER_URL_API="https://$CONTROLLER_URL$API_ENDPOINT"
-
-        echo "CONTROLLER_URL_API"
-
-        PAYLOAD="{\"description\": \"Project $(params.NAMESPACE) token\", \"application\":5, \"scope\":\"write\"}"
-
-        echo "$PAYLOAD"
-
-        echo "Create new token"
-
-        RESPONSE=$(curl -k \
-          -X POST -u "admin:$PASSWORD" \
-          -H "Content-Type: application/json" \
-          --data "$PAYLOAD" \
-          $CONTROLLER_URL_API)
-
-        echo $RESPONSE
 
         TOKEN=$(jq -r '.token' <<< "$RESPONSE")
 
