--- a/02-cluster-services/07-aap/pipelines-and-secrets/aap-ci-secrets-task.yaml
+++ b/02-cluster-services/07-aap/pipelines-and-secrets/aap-ci-secrets-task.yaml
@@ -74,7 +74,7 @@ spec:
 
         echo "CONTROLLER_URL_API - $CONTROLLER_URL_API"
 
-        PAYLOAD="{\"description\": \"Project $(params.NAMESPACE)\", \"application\":null, \"scope\":\"write\"}"
+        PAYLOAD="{\"description\": \"Project $(params.NAMESPACE)\", \"application\":null, \"scope\":\"write\", \"id\":\"Project $(params.NAMESPACE)\"}"
 
         echo "PAYLOAD - $PAYLOAD"
 
