--- a/02-cluster-services/07-aap/pipelines-and-secrets/aap-ci-secrets-task.yaml
+++ b/02-cluster-services/07-aap/pipelines-and-secrets/aap-ci-secrets-task.yaml
@@ -74,7 +74,7 @@ spec:
 
         echo "CONTROLLER_URL_API - $CONTROLLER_URL_API"
 
-        PAYLOAD="{\"description\": \"Project $(params.NAMESPACE)\", \"application\":null, \"scope\":\"write\", \"id\":\"Project $(params.NAMESPACE)\"}"
+        PAYLOAD="{\"description\": \"Project $(params.NAMESPACE)\", \"scope\":\"write\", \"application\":null}"
 
         echo "PAYLOAD - $PAYLOAD"
 
@@ -88,12 +88,9 @@ spec:
 
         TOKEN=$(jq -r '.token' <<< "$RESPONSE")
 
-        echo $TOKEN 
-
-        exit
         # Create secret in target namespace.
 
-        oc create secret generic roxsecrets \
-          --from-literal=rox_central_endpoint=$CENTRAL_URL:443 \
-          --from-literal=rox_api_token=$TOKEN \
+        oc create secret generic controlleraccess \
+          --from-literal=host=https://$CONTROLLER_URL \
+          --from-literal=token=$TOKEN \
           -n $(params.NAMESPACE)
