--- a/02-cluster-services/07-aap/pipelines-and-secrets/kustomization.yaml
+++ b/02-cluster-services/07-aap/pipelines-and-secrets/kustomization.yaml
@@ -4,4 +4,4 @@ kind: Kustomization
 resources:
   - pipeline-rbac.yaml
   - token-secret-pipeline.yaml
-#  - aap-ci-secrets-task.yaml
+  - aap-ci-secrets-task.yaml
