--- a/01-cluster-config/01-groups-and-membership/kustomization.yaml
+++ b/01-cluster-config/01-groups-and-membership/kustomization.yaml
@@ -2,6 +2,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - openshift-gitops-admins-group.yaml
-  - admins-group.yaml
+  - cluster-admins-group.yaml
   - users-group.yaml
