--- a/01-cluster-config/01-groups-and-membership/cluster-admins-group.yaml
+++ b/01-cluster-config/01-groups-and-membership/cluster-admins-group.yaml
@@ -4,13 +4,12 @@ metadata:
   name: cluster-admins
 users:
   - admin
-
 ---
 
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: cluster-admins
+  name: group-cluster-admins
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
