--- a/03-tenants/04-example-helloworld/setup/argo-applicationset.yaml
+++ b/03-tenants/04-example-helloworld/setup/argo-applicationset.yaml
@@ -29,7 +29,7 @@ spec:
         namespace: example-helloworld-{{cluster}}
       syncPolicy:
         automated:
-          prune: false
+          prune: true
           selfHeal: true
         syncOptions:
           - ApplyOutOfSyncOnly=true
