--- a/03-tenants/04-example-helloworld/overlays/dev/kustomization.yaml
+++ b/03-tenants/04-example-helloworld/overlays/dev/kustomization.yaml
@@ -7,5 +7,11 @@ commonAnnotations:
 bases:
 - ../../bases
 
-patchesStrategicMerge:
-- configmap.yaml
+#patchesStrategicMerge:
+#- configmap.yaml
+
+configMapGenerator:
+- name: appconfig
+  files:
+  - envs/msg
+
