--- a/02-cluster-services/08-sealed-secrets/kustomization.yaml
+++ b/02-cluster-services/08-sealed-secrets/kustomization.yaml
@@ -6,3 +6,5 @@ namespace: sealed-secrets
 bases:
   - https://github.com/bitnami-labs/sealed-secrets/releases/download/v0.18.0/controller.yaml
 
+resources:
+  - namespace.yaml
