--- a/02-cluster-services/08-sealed-secrets/kustomization.yaml
+++ b/02-cluster-services/08-sealed-secrets/kustomization.yaml
@@ -8,3 +8,11 @@ bases:
 
 resources:
   - namespace.yaml
+
+patchesJson6902:
+  - target:
+      version: v1
+      group: apps
+      kind: Deployment
+      name: sealed-secrets-controller
+    path: patch-sealed-secrets.yaml
