--- a/02-cluster-services/08-sealed-secrets/kustomization.yaml
+++ b/02-cluster-services/08-sealed-secrets/kustomization.yaml
@@ -9,10 +9,10 @@ bases:
 resources:
   - namespace.yaml
 
-patchesJson6902:
-  - target:
-      version: v1
-      group: apps
-      kind: Deployment
-      name: sealed-secrets-controller
-    path: patch-sealed-secrets.yaml
+#patchesJson6902:
+#  - target:
+#      version: v1
+#      group: apps
+#      kind: Deployment
+#      name: sealed-secrets-controller
+#    path: patch-sealed-secrets.yaml
