--- a/03-tenants/04-example-helloworld/setup/argo-applicationset.yaml
+++ b/03-tenants/04-example-helloworld/setup/argo-applicationset.yaml
@@ -13,8 +13,8 @@ spec:
         url: https://kubernetes.default.svc
       - cluster: dev
         url: https://kubernetes.default.svc
-#      - cluster: cicd
-#        url: https://kubernetes.default.svc
+      - cluster: cicd
+        url: https://kubernetes.default.svc
   template:
     metadata:
       name: 'example-helloworld-{{cluster}}'
