--- a/03-tenants/04-example-helloworld/setup/argo-project.yaml
+++ b/03-tenants/04-example-helloworld/setup/argo-project.yaml
@@ -46,7 +46,7 @@ spec:
     kind: ServiceMonitor 
   - group: 'networking.k8s.io'
     kind: NetworkPolicy  
-  - group: 'bitnami.com/v1alpha1'
+  - group: 'bitnami.com'
     kind: sealedsecret
  
   orphanedResources:
