--- a/03-tenants/04-example-helloworld/overlays/cicd/kustomization.yaml
+++ b/03-tenants/04-example-helloworld/overlays/cicd/kustomization.yaml
@@ -2,5 +2,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - pvc-workspace.yaml
-  - sealed-quay-secret.yaml
+- pvc-workspace.yaml
+- sealed-quay-secret.yaml
+- sealed-github-secret.yaml
