--- a/03-tenants/04-example-helloworld/overlays/cicd/pipeline-example-helloworld.yaml
+++ b/03-tenants/04-example-helloworld/overlays/cicd/pipeline-example-helloworld.yaml
@@ -45,5 +45,5 @@ spec:
         kind: ClusterTask
         name: git-clone
       workspaces:
-        - name: output
+        - name: workspace
           workspace: workspace
