--- a/03-tenants/04-example-helloworld/overlays/cicd/pipeline-example-helloworld.yaml
+++ b/03-tenants/04-example-helloworld/overlays/cicd/pipeline-example-helloworld.yaml
@@ -45,4 +45,10 @@ spec:
         kind: ClusterTask
         name: git-clone
       workspaces:
-        - name: workspace
+        - name: output
+          workspace: workspace
+    workspaces:
+      - name: workspace
+      - name: maven-settings
+      - name: images-url
+      - name: git-basic-auth
