--- a/03-tenants/04-example-helloworld/overlays/cicd/github-secret.yaml
+++ b/03-tenants/04-example-helloworld/overlays/cicd/github-secret.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 metadata:
   name: github-creds
 stringData:
-  .git-credentials: https://apoczekalewicz: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@github.com
+  .git-credentials: https://XXX:YYY@github.com
   .gitconfig: |
     [credential "https://github.com"]
       helper = store
