--- a/03-tenants/04-example-helloworld/overlays/cicd/quay-secret.yaml
+++ b/03-tenants/04-example-helloworld/overlays/cicd/quay-secret.yaml
@@ -5,6 +5,6 @@ metadata:
   annotations:
     tekton.dev/docker-0: 'https://quay.io'
 stringData:
-  username: apoczeka+examplehelloworld
-  password: 0G1ZHFM95OV238PPN081RXVWWHTO3AU1CE10Y85L6SKR9A26UL56R21Y7JNVB81Q
+  username: XXX
+  password: YYY
 type: kubernetes.io/basic-auth
