--- a/03-tenants/04-example-helloworld/overlays/cicd/pipeline-example-helloworld.yaml
+++ b/03-tenants/04-example-helloworld/overlays/cicd/pipeline-example-helloworld.yaml
@@ -59,7 +59,7 @@ spec:
         - name: STORAGE_DRIVER
           value: vfs
         - name: DOCKERFILE
-          value: './Dockerfile'
+          value: './Containerfile'
         - name: CONTEXT
           value: '.'
         - name: TLSVERIFY
