--- a/03-tenants/04-example-helloworld/overlays/dev/kustomization.yaml
+++ b/03-tenants/04-example-helloworld/overlays/dev/kustomization.yaml
@@ -15,3 +15,7 @@ configMapGenerator:
   files:
   - envs/msg
 
+images:
+- name: quay.io/apoczeka/app-python-hello
+  newName: quay.io/apoczeka/app-python-hello
+  newTag: latest
