--- a/03-tenants/04-example-helloworld/overlays/cicd/kustomization.yaml
+++ b/03-tenants/04-example-helloworld/overlays/cicd/kustomization.yaml
@@ -5,4 +5,6 @@ resources:
 - pvc-workspace.yaml
 - sealed-quay-secret.yaml
 - sealed-github-secret.yaml
+- task-git-update-deployment.yaml
 - pipeline-example-helloworld.yaml
+
