--- a/03-tenants/04-example-helloworld/overlays/cicd/pipeline-example-helloworld.yaml
+++ b/03-tenants/04-example-helloworld/overlays/cicd/pipeline-example-helloworld.yaml
@@ -10,7 +10,7 @@ spec:
     - default: master
       name: APP_SOURCE_REVISION
       type: string
-    - default: 'https://github.com/apoczeka/gitops.git'
+    - default: 'https://github.com/apoczekalewicz/gitops.git'
       name: APP_MANIFESTS_GIT
       type: string
     - default: '1.0'
