--- a/03-tenants/04-example-helloworld/overlays/dev/kustomization.yaml
+++ b/03-tenants/04-example-helloworld/overlays/dev/kustomization.yaml
@@ -16,7 +16,7 @@ configMapGenerator:
 images:
 - name: quay.io/apoczeka/example-helloworld:latest
   newName: quay.io/apoczeka/example-helloworld
-  newTag: "1.0"
+  newTag: "latest"
 
 resources:
 - ../../bases
