--- a/03-tenants/04-example-helloworld/overlays/cicd/task-git-update-deployment.yaml
+++ b/03-tenants/04-example-helloworld/overlays/cicd/task-git-update-deployment.yaml
@@ -8,21 +8,27 @@ spec:
     - default: $(params.APP_MANIFESTS_GIT)
       name: GIT_REPOSITORY
       type: string
+
     - default: master
       name: GIT_REVISION
       type: string
-    - default: 'quay.io/jstakun/hello-quarkus:latest'
+
+    - default: 'quay.io/apoczeka/example-helloworld:latest'
       name: CURRENT_IMAGE
       type: string
-    - default: quay.io/jstakun/hello-quarkus-dev
+
+    - default: 'quay.io/apoczeka/example-helloword'
       name: NEW_IMAGE
       type: string
+
     - default: $(params.APP_IMAGE_TAG)
       name: NEW_TAG
       type: string
-    - default: stage
+
+    - default: dev
       name: KUSTOMIZATION_PATH
       type: string
+
   results:
     - description: The commit SHA
       name: commit
