--- a/03-tenants/04-example-helloworld/overlays/cicd/kustomization.yaml
+++ b/03-tenants/04-example-helloworld/overlays/cicd/kustomization.yaml
@@ -8,3 +8,4 @@ resources:
 - task-git-update-deployment.yaml
 - pipeline-example-helloworld.yaml
 - sealed-signing-secrets.yaml
+- sealed-crda-secret.yaml
