--- a/03-tenants/04-example-helloworld/overlays/cicd/pipeline-example-helloworld-secure.yaml
+++ b/03-tenants/04-example-helloworld/overlays/cicd/pipeline-example-helloworld-secure.yaml
@@ -122,6 +122,9 @@ spec:
       taskRef:
         kind: Task
         name: cosign
+      workspaces:
+        - name: source
+          workspace: workspace
 
     - name: git-update-deployment
       params:
