--- a/03-tenants/04-example-helloworld/overlays/cicd/pipelinerun-secure.yaml
+++ b/03-tenants/04-example-helloworld/overlays/cicd/pipelinerun-secure.yaml
@@ -39,3 +39,6 @@ spec:
     - name: git-basic-auth
       secret:
         secretName: github-creds
+    - name: sonarconfig
+      configmap:
+        name: sonar-properties
