--- a/03-tenants/04-example-helloworld/overlays/cicd/kustomization.yaml
+++ b/03-tenants/04-example-helloworld/overlays/cicd/kustomization.yaml
@@ -7,6 +7,7 @@ resources:
 - configs/sealed-quay-secret.yaml
 - configs/sealed-github-secret.yaml
 - configs/sealed-signing-secrets.yaml
+- configs/sealed-sonar-secret.yaml
 
 - tasks/task-cosign.yaml
 - tasks/task-git-update-deployment.yaml
