--- a/03-tenants/04-example-helloworld/overlays/cicd/plain_configs/sonar-secret.yaml
+++ b/03-tenants/04-example-helloworld/overlays/cicd/plain_configs/sonar-secret.yaml
@@ -1,8 +1,8 @@
-kind: ConfigMap
+kind: Secret
 apiVersion: v1
 metadata:
   name: sonar-properties
-data:
+stringData:
   sonar-project.properties: |
     sonar.organization=apoczeka
     sonar.projectKey=example-helloworld-key
