--- a/03-tenants/04-example-helloworld/overlays/cicd/pipelineruns/pipelinerun-secure.yaml
+++ b/03-tenants/04-example-helloworld/overlays/cicd/pipelineruns/pipelinerun-secure.yaml
@@ -40,5 +40,5 @@ spec:
       secret:
         secretName: github-creds
     - name: sonarconfig
-      configmap:
-        name: sonar-properties
+      secret:
+        secretName: sonar-properties
